# mindy

./: .gitignore  .gitmodules  .prettierrc  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: coremark.rs
mindy-website/: Cargo.toml  README.md
mindy-website/src/: buildings.rs  enums.rs  lib.rs  utils.rs
mindy-website/www/: eslint.config.js  index.html  package.json  vite.config.ts
mindy-website/www/src/: App.module.css  App.tsx  global.css  hooks.ts  utils.ts
mindy-website/www/src/components/: AddBuildingMenu.tsx  BuildingLinkEdge.tsx  LogicVMFlow.tsx  LogicVMProvider.tsx
mindy-website/www/src/components/edges/: BuildingLinkConnectionLine.tsx  BuildingLinkEdge.tsx
mindy-website/www/src/components/nodes/: BuildingNode.module.css  BuildingNode.tsx  DisplayNode.module.css  DisplayNode.tsx  MemoryNode.tsx  MessageNode.module.css  MessageNode.tsx  ProcessorNode.module.css  ProcessorNode.tsx  SorterNode.module.css  SorterNode.tsx  SwitchNode.tsx
mindy-website/www/src/workers/: vm.ts  vm.worker.ts
schematics/: mlogv32.msch
src/: lib.rs  utils.rs
src/logic/: ast.rs  grammar.lalrpop  mod.rs
src/logic/vm/: blocks.rs  buildings.rs  instructions.rs  mod.rs  processor.rs  variables.rs
src/parser/: ast.rs  grammar.lalrpop  grammar_util.rs  mod.rs
src/types/: colors.rs  content.rs  enums.rs  java.rs  logic.rs  math.rs  mod.rs  schematics.rs  type_io.rs
src/types/content/: README.md  blocks.json
src/vm/: buildings.rs  draw.rs  instructions.rs  mod.rs  processor.rs  variables.rs
src/vm/draw/: embedded.rs  mod.rs
tests/vm/: test_link_max_range.msch  test_sensor_schematic.msch
