[package]
name = "mindustry-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
binrw = "0.15.0"
cesu8 = "1.1.0"
csv = "1.3.1"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
indexmap = "2.10.0"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
lazy_static = "1.5.0"
noise = "0.9.0"
num-traits = "0.2.19"
rand = "0.9.2"
regex = "1.11.1"
replace_with = "0.1.8"
seekable_reader = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
velcro = "0.5.4"

[build-dependencies]
lalrpop = "0.22.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
