[package]
name = "mindy"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "mlog"
required-features = ["mlog"]

[[bin]]
name = "mlogv32"
required-features = ["mlogv32"]

[[bench]]
name = "coremark"
harness = false
required-features = ["mlogv32"]

[dependencies]
binrw = { version = "0.15.0", default-features = false, features = ["verbose-backtrace"] }
derivative = { version = "2.2.0", features = ["use_core"] }
enum_dispatch = "0.3.13"
hashbrown = "0.15.5"
indexmap = { version = "2.10.0", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
lazy_static = "1.5.0"
num-traits = { version = "0.2.19", default-features = false }
postcard = "1.1.3"
rapidhash = { version = "3.1.0", default-features = false }
replace_with = { version = "0.1.8", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false }
widestring = { version = "1.2.0", default-features = false, features = ["alloc"] }

# no_std
libm = { version = "0.2.11", optional = true }
serde-json-core = { version = "0.6.0", optional = true }

# std
base64 = { version = "0.22.1", optional = true }
cesu8 = { version = "1.1.0", optional = true }
csv = { version = "1.3.1", optional = true }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"], optional = true }
lalrpop-util = { version = "0.22.2", features = ["lexer"], optional = true }
# https://github.com/Razaekel/noise-rs/issues/251
noise = { version = "0.9.0", optional = true }
rand = { version = "0.9.2", optional = true }
regex = { version = "1.11.1", optional = true }
serde_json = { version = "1.0.141", optional = true }

# mlog
clap = { version = "4.5.42", features = ["derive"], optional = true }
clap-stdin = { version = "0.6.0", optional = true }

# mlogv32
crossterm = { version = "0.29.0", optional = true }
cursive = { version = "0.21.1", optional = true }
indicatif = { version = "0.18.0", optional = true }
bitflags = "2.9.1"

[build-dependencies]
lalrpop = { version = "0.22.2", optional = true }

[dev-dependencies]
iai-callgrind = "0.16.1"
pretty_assertions = "1.4.1"
velcro = "0.5.4"

[features]
default = ["std"]
no_std = [
    "dep:libm",
    "dep:serde-json-core",
    "lazy_static/spin_no_std",
]
serde_alloc = [
    "serde/alloc",
]
std = [
    "serde_alloc",
    "dep:base64",
    "dep:cesu8",
    "dep:csv",
    "dep:flate2",
    "dep:lalrpop",
    "dep:lalrpop-util",
    "dep:noise",
    "dep:rand",
    "dep:regex",
    "dep:serde_json",
    "binrw/std",
    "indexmap/std",
    "itertools/use_std",
    "num-traits/std",
    "postcard/use-std",
    "rapidhash/std",
    "regex/std",
    "replace_with/std",
    "serde/std",
    "strum/std",
    "thiserror/std",
]
mlog = [
    "std",
    "dep:clap",
    "dep:clap-stdin",
]
mlogv32 = [
    "mlog",
    "dep:crossterm",
    "dep:cursive",
    "dep:indicatif",
]

[profile.dev-debug]
inherits = "dev"

[profile.dev-debug.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.bench]
debug = true
strip = false
