[package]
name = "mindy-website"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
mindy = { path = "..", features = ["embedded_graphics"] }
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"
