[package]
name = "mindy-website"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
embedded-graphics = "0.8.1"
embedded-graphics-web-simulator = "0.4.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3.77"
mindy = { path = "..", features = ["embedded_graphics", "wasm"] }
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Element",
]
