[package]
name = "mindy-website"
edition = "2024"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
embedded-graphics = "0.8.1"
embedded-graphics-web-simulator = { version = "0.4.0", git = "https://github.com/object-Object/embedded-graphics-web-simulator", branch = "offscreen_canvas" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3.77"
mindy = { path = "..", default-features = false, features = ["std", "embedded_graphics", "wasm"] }
wasm-bindgen = "0.2.100"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "WorkerGlobalScope",
]
